# jax-solitons

./: .gitignore  .zenodo.json  CAMPAIGN.md  CHANGELOG.md  CITATION.cff  COMPENDIUM.md  DESIGN.md  PARTICLES.md  README.md  TODO.md  VALIDATION.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: RELEASING.md  SKYRME.md
docs/releases/: v0.0.3.md  v0.0.4.md
examples/: ehn_knot_soliton.py  faddeev_campaign.py  harmonic_ring.py  kuramoto_ring.py  nlkg_vortex_tangle.py
scripts/: skyrme_b2_calibration.py  zenodo_release.py
src/jax_solitons/: __init__.py  event_graph.py  farm_config.py  grid.py  knots.py  measure.py  model.py  runfns.py  runs.py  seeds.py  topology.py
src/jax_solitons/campaign/: __init__.py  driver.py  farm.py  fleet.py  local_exec.py  modal_exec.py  multi.py  protocols.py  provider_exec.py  reap.py  reference.py  remote.py  runpod.py  status.py  store.py  vast.py  worker.py
src/jax_solitons/invariants/: __init__.py  curves.py  linking_invariants.py  torus_knots.py
src/jax_solitons/models/: __init__.py  abelian_higgs.py  faddeev.py  gauged_faddeev.py  gpe.py  nlkg.py  skyrme.py
src/jax_solitons/steppers/: __init__.py  adam.py  flow.py  splitstep.py  verlet.py
src/jax_solitons/topology/: __init__.py  colored_jones.py
tests/: conftest.py  test_abelian_higgs.py  test_abelian_higgs_oracle.py  test_acceptance_gates.py  test_campaign.py  test_colored_jones.py  test_event_graph.py  test_exact.py  test_farm.py  test_farm_config_goldens.py  test_fleet.py  test_flux_threaded_knot.py  test_gauged_faddeev.py  test_gpe.py  test_gpe_analytic.py  test_gpu_tier.py  test_knots.py  test_local_exec.py  test_multi.py  test_nlkg.py  test_oracle_equivalence.py  test_protocol_conformance.py  test_provider_exec.py  test_reap.py  test_remote.py  test_run_config_goldens.py  test_runpod_provider.py  test_skyrme_exact.py  test_smoke.py  test_store.py  test_topology_linking.py  test_torus_knot_hopf.py  test_vast_client.py  test_vast_ledger.py  test_worker.py
tests/data/: run_name_goldens.jsonl
