[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-solitons"
version = "0.0.2"
description = "A general JAX engine for classical field-theory solitons: composable energy functionals, topology-preserving discretizations, GPU-farm-ready relaxation and dynamics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "James P. Galasyn" },
  { name = "Claude Théodore" },
]
keywords = [
  "solitons", "hopfions", "skyrmions", "faddeev-skyrme",
  "gross-pitaevskii", "topological-charge", "jax", "gpu",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.4.30",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
]
oracle = [
  # Pure-numpy reference engine for the cross-engine equivalence test
  # (tests/test_oracle_equivalence.py). nwt-substrate is on PyPI as of v0.5.0, so
  # this is a plain version specifier (PyPI forbids direct-reference git URLs in
  # published metadata). tests/test_oracle_equivalence.py self-skips when absent,
  # so it stays optional for local dev; CI installs ".[test,oracle]" to run it.
  # v0.5.0 is the first release carrying solitons.faddeev (concept DOI
  # 10.5281/zenodo.20012027); bump this floor intentionally to re-validate the
  # equivalence gate against a newer oracle.
  "nwt-substrate>=0.5.0",
]
sharding = [
  "jaxdecomp>=0.3",  # distributed 3D FFT + halo exchange
]
# Note: the Vast.ai executor (campaign/vast.py) is intentionally stdlib-only
# (urllib) — no extra needed — because the vastai SDK breaks against the live API.
checkpoint = [
  "orbax-checkpoint",
]

[project.urls]
Homepage = "https://github.com/JimGalasyn/jax-solitons"
Issues = "https://github.com/JimGalasyn/jax-solitons/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jax_solitons"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "acceptance: regression contract gates (the validation chain of the source engine)",
]
