[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-solitons"
version = "0.0.8"
description = "A general JAX engine for classical field-theory solitons: composable energy functionals, topology-preserving discretizations, GPU-farm-ready relaxation and dynamics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "James P. Galasyn" },
  { name = "Claude Théodore" },
]
keywords = [
  "solitons", "hopfions", "skyrmions", "faddeev-skyrme",
  "gross-pitaevskii", "topological-charge", "jax", "gpu",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.4.30",
  "numpy>=1.24",
  "scipy>=1.10",
  # The campaign/GPU-farming layer, extracted at rule-of-three (2026-07): config-
  # hashed registry, restart-exact checkpoints, spot-fleet executors, cloud brokers.
  # jax_solitons.RunConfig structurally satisfies run_farm.RunConfig; the physics
  # crosses as runfns:faddeev_relax_then_id. Plain specifier, not a git URL: PyPI
  # forbids direct references in published metadata.
  # HARD (not optional) dependency by design: run-farm supplies runs.py's checkpoint
  # helpers (save/load_checkpoint, run_dir), which the core engine's restartable-run
  # contract (R4) leans on even for a single local run -- not just fleet campaigns.
  # Its base deps are only jax + numpy (the cloud SDKs live behind run-farm's own
  # `modal`/`s3` extras), both already required above, so the PDE-only user pulls
  # zero net-new transitive dependencies.
  "run-farm>=0.1.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-xdist>=3",        # parallel test execution (pytest -n auto)
  "pyknotid>=0.5",          # exercises the jax_solitons.knots ID tests in CI
]
knots = [
  # Core-curve knot identification (jax_solitons.knots.identify_knot). Optional:
  # tracing curves needs only numpy/scipy; the Alexander determinant needs this.
  "pyknotid>=0.5",
]
oracle = [
  # Pure-numpy reference engine for the cross-engine equivalence test
  # (tests/test_oracle_equivalence.py). nwt-substrate is on PyPI as of v0.5.0, so
  # this is a plain version specifier (PyPI forbids direct-reference git URLs in
  # published metadata). tests/test_oracle_equivalence.py self-skips when absent,
  # so it stays optional for local dev; CI installs ".[test,oracle]" to run it.
  # PINNED EXACTLY for reproducible CI: the equivalence gate is sensitive to
  # upstream changes, so a floor (>=) could break/drift it whenever nwt-substrate
  # publishes. Bump this pin intentionally to re-validate against a newer oracle.
  # v0.5.0 is the first release carrying solitons.faddeev (concept DOI
  # 10.5281/zenodo.20012027).
  "nwt-substrate==0.5.0",
]
sharding = [
  "jaxdecomp>=0.3",  # distributed 3D FFT + halo exchange
]
# The campaign layer moved to run-farm (2026-07): its Vast broker, the modal
# executor, and the Orbax checkpoint roadmap now live there. Depend on run-farm
# (base deps) for the campaign; its own extras (`modal`, `s3`) cover the rest.

[project.urls]
Homepage = "https://github.com/JimGalasyn/jax-solitons"
Issues = "https://github.com/JimGalasyn/jax-solitons/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jax_solitons"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "acceptance: regression contract gates (the validation chain of the source engine)",
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "\\.\\.\\.",                 # Protocol method bodies (ellipsis stubs)
  "if TYPE_CHECKING:",
  "def __str__",              # cosmetic formatters
  "def __repr__",
]
